--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+p{
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+}
